--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   basic_utils: ^2.6.3
   path_provider: ^1.6.24
   intl: ^0.16.1
+  package_info: '>=0.4.3+2 <2.0.0'
   shared_preferences: '>=0.5.12+4 <2.0.0'
 
   #EXPORT/IMPORT
