--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,7 @@ android {
 
     dependencies {
         implementation 'androidx.multidex:multidex:2.0.1'
+        implementation 'com.google.android.gms:play-services-basement:17.4.0'
     }
 }
 
