--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bloodpressurelog
 description: A new Flutter project.
 
-version: 1.0.0+1
+version: 1.2.0+6
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -28,6 +28,9 @@ dependencies:
   file_picker: ^4.1.6
   share_plus: ^3.0.4
   url_launcher: ^6.0.13
+
+  #FIREBASE
+  google_mobile_ads: ^1.0.0
 
   #UI
   google_fonts: ^2.1.0
