--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bloodpressurelog
 description: A new Flutter project.
 
-version: 1.2.0+6
+version: 1.3.1+8
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -14,44 +14,45 @@ dependencies:
     sdk: flutter
 
   #BASE
-  provider: ^6.0.1
-  sqflite: ^2.0.0+4
-  basic_utils: ^3.7.0
-  path_provider: ^2.0.5
-  intl: ^0.17.0
-  quick_actions: ^0.6.0+7
-  package_info_plus: ^1.3.0
-  shared_preferences: '^2.0.8'
+  provider: ^6.0.5
+  sqflite: ^2.2.8+4
+  basic_utils: ^5.6.0
+  path: ^1.8.3
+  path_provider: ^2.0.15
+  intl: ^0.18.0
+  quick_actions: ^1.0.5
+  package_info_plus: ^4.0.2
+  shared_preferences: '^2.1.2'
 
   #EXPORT/IMPORT
-  pdf: ^3.6.1
-  file_picker: ^4.1.6
-  share_plus: ^3.0.4
-  url_launcher: ^6.0.13
+  pdf: ^3.10.4
+  file_picker: ^5.3.2
+  share_plus: ^7.0.2
+  url_launcher: ^6.1.11
 
   #FIREBASE
-  google_mobile_ads: ^1.0.0
+  google_mobile_ads: ^3.0.0
 
   #UI
-  google_fonts: ^2.1.0
-  intro_slider: ^3.0.2
+  google_fonts: ^5.1.0
+  intro_slider: ^4.2.0
   bottom_navy_bar: ^6.0.0
-  fluttertoast: ^8.0.8
-  rounded_loading_button: ^2.0.9
-  step_progress_indicator: ^1.0.1
-  numberpicker: ^2.1.1
-  awesome_dialog: ^2.1.1
-  flutter_datetime_picker: ^1.5.1
-  charts_flutter: ^0.12.0
-  cupertino_icons: ^1.0.3
+  fluttertoast: ^8.2.2
+  rounded_loading_button: ^2.1.0
+  step_progress_indicator: ^1.0.2
+  numberpicker: ^2.1.2
+  material_dialogs: ^1.1.4
+  flutter_datetime_picker_plus: ^2.0.1
+  fl_chart: ^0.63.0
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
-  flutter_launcher_icons: ^0.9.2
-  flutter_native_splash: ^1.3.1
+  flutter_lints: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.1
 
 flutter_icons:
   android: true
